--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </tr>
   </tbody>
 </table>
-<a href="%3F%3F%3F%3F%3F%3F%3F%3F%3F%3F%3F">&#1083;&#1086;&#1080;&#1075;&#1080;&#1096;&#1075;&#1080;&#1075;&#1096;&#1080;</a><br>
+<a href="kakto.html">лоигишгигши</a><br>
+
 </body>
 </html>
