--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>index</title>
+  <title>kaktotakoioi</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
-  <tbody>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
-<a href="kakto.html">лоигишгигши</a><br>
-
+<nav role="navigation">
+<ul>
+  <li><a href="index.html">Главная</a></li>
+  <li><a href="#">Информатика</a>
+    <ul>
+      <li><a href="css.html">CSS</a></li>
+      <li><a href="js.html">JS</a></li>
+    </ul>
+  </li>
+  <li><a href="page1.html">Мой класс</a></li>
+  <li><a href="fruits.html">Фрухты</a></li>
+</ul>
+</nav>
+ <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p>Заглавие</p>
+<br>
 </body>
 </html>
