--- a/fruits.html
+++ b/fruits.html
@@ -12,26 +12,16 @@
 <body>
 
 <nav role="navigation">
-
 <ul>
-
-  <li><a href="index.html">Главная</a></li>
-
-  <li><a href="#">Информатика</a>
+  <li><a href="index.html">Р“Р»Р°РІРЅР°СЏ</a></li>
+  <li><a href="#">РРЅС„РѕСЂРјР°С‚РёРєР°</a>
     <ul>
-
       <li><a href="css.html">CSS</a></li>
-
       <li><a href="js.html">JS</a></li>
-
     </ul>
-
   </li>
-
-  <li><a href="page1.html">Мой класс</a></li>
- 
-  <li><a href="fruits.html">Фрухты</a></li>
-
+  <li><a href="page1.html">РњРѕР№ РєР»Р°СЃСЃ</a></li>
+  <li><a href="fruits.html">Р¤СЂСѓС…С‚С‹</a></li>
 </ul>
 </nav>
  <br>
