--- a/js.html
+++ b/js.html
@@ -23,7 +23,7 @@
 <br>
 <br>
 <br>
-<br>  <a  href="JS1.html">1.15</a>
+<br>  <a  href="js1.html">1.15</a>
  <br>
   <br>
   <a  href="js2.html">1.61</a>
