--- a/js2.html
+++ b/js2.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>kaktotakoioi</title>
+  <link href="js1.html" rel="stylesheet">
+</head>
+<body>
+<nav role="navigation">
+<ul>
 <html>
 <head>
 <meta http-equiv="Content-Type"
