--- a/js2.html
+++ b/js2.html
@@ -93,7 +93,7 @@ ______________________________________________
 a=<input type="text" value="0" id="a_znach">
 <br>
 <br>
-<button onclick="func()"> knopushka2 </button>
+<button onclick="func()">Надо нажать</button>
 <br>
 <br>
 <div id="a"></div>
