--- a/js3.html
+++ b/js3.html
@@ -10,8 +10,20 @@
   background: white;
   font-family: Georgia;
   }
-
   </style>
+  }
+H1 {
+  font-size: 30px;
+  font-weight: normal;
+  cursor: pointer;
+  text-shadow: 0 0 15px #999;
+  color: transparent;
+  transition: all .5s;
+  }
+  H1:hover {
+    text-shadow: 0 0 0px #333;
+    cursor: pointer;
+    }
 </head>
 <body>
 <nav role="navigation">
