--- a/js3.html
+++ b/js3.html
@@ -36,15 +36,10 @@ content="text/html; charset=windows-1251">
 </head>
 <script>
 function func(){
-n=document.getElementById("a_znach").value;
-y=n
-x=n%10
-a=(n-x)/10
-n=100*x+a
+x=document.getElementById("a_znach").value;
+n=(x-x%10)/10+(x%10)*100
 document.getElementById("a").innerHTML ="<h1>"+"2.25= "+ n+"</h1>";
-x=(y-y%100)/100
-a=y%100
-n=10*a+x
+ n=(x-x%100)/100+(x%100*10)
 document.getElementById("b").innerHTML ="<h1>"+"2.27= "+ n+"</h1>";
 x=((y-y%100)/10+y%10)
 n=10*x+(y%100-y%10)/10
