--- a/js4.html
+++ b/js4.html
@@ -3,6 +3,34 @@
 	<head>
 		<title>canvasExample</title>
         <meta charset='utf-8' />
+		a.button.purple {
+    background: #e8c4e4;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e8c4e4), to(#d698d0));
+    background: -moz-linear-gradient(#e8c4e4, #d698d0);
+    background: linear-gradient(#e8c4e4, #d698d0);
+    border: solid 1px #da9fd4;
+    border-bottom: solid 3px #946890;
+    box-shadow: inset 0 0 0 1px #f2dcef;
+    color: #7b5777;
+    text-shadow: 0 1px 0 #eacae6; }
+    
+a.button.purple:hover {
+    background: #daa2d4;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#daa2d4), to(#e0b1db));
+    background: -moz-linear-gradient(#daa2d4, #e0b1db);
+    background: linear-gradient(#daa2d4, #e0b1db);
+    border: solid 1px #ca91c4;
+    border-bottom: solid 3px #946890;
+    box-shadow: inset 0 0 0 1px #e9c7e6; }
+    
+a.button.purple:active {
+    background: #d49ace;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#d49ace), to(#cc94c6));
+    background: -moz-linear-gradient(#d49ace, #cc94c6);
+    background: linear-gradient(#d49ace, #cc94c6);
+    border: solid 1px #8e678a;
+    box-shadow: inset 0 10px 15px 0 #ba87b5; }
+</style>
         		<script>
 		function er1(){
 var canvas = document.getElementById('example1');
