--- a/js4.html
+++ b/js4.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>canvasExample</title>
         <meta charset='utf-8' />
+		<style>
 		a.button.purple {
     background: #e8c4e4;
     background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e8c4e4), to(#d698d0));
@@ -152,14 +153,15 @@ ctx.fill();
 		</script>
 	</head>
 	<body>
-<button onclick="er1()">3.32а</button>
-<button onclick="er2()">3.32б</button>
-<button onclick="er3()">3.32в</button>
-<button onclick="er4()">3.32г</button>
-<button onclick="er5()">3.32д</button>
-<button onclick="er6()">3.32е</button>
-<button onclick="er7()">3.32ж</button>
-<button onclick="er8()">3.32з</button>
+		<a href="#" onclick="clean()" class="button purple">Очистить</a>
+  <a href="#" onclick="er1()" class="button purple">3.31а</a>
+  <a href="#" onclick="er2()" class="button purple">3.31б</a>
+		<a href="#" onclick="er3()" class="button purple">3.31в</a>
+		<a href="#" onclick="er4()" class="button purple">3.31г</a>
+		<a href="#" onclick="er5()" class="button purple">3.31д</a>
+		<a href="#" onclick="er6()" class="button purple">3.31е</a>
+		<a href="#" onclick="er7()" class="button purple">3.31ж</a>
+		<a href="#" onclick="er8()" class="button purple">3.31з</a>
 
 <br>
 	<canvas width='640' height='480' id='example1'>Обновите браузер</canvas>
