--- a/js4.html
+++ b/js4.html
@@ -34,7 +34,7 @@ a.button.purple:active {
 </style>
         		<script>
 		function er1(){
-var canvas = document.getElementById('example1');
+var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -50,7 +50,7 @@ ctx.stroke();
 ctx.fillRect(0, 0, 300, 230);
 }
 		function er2(){
-	var canvas = document.getElementById('example2');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -64,7 +64,7 @@ ctx.fill();
 
 }
 		function er3(){
-	var canvas = document.getElementById('example3');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -78,7 +78,7 @@ ctx.fill();
 
 }
 		function er4(){
-	var canvas = document.getElementById('example4');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -92,7 +92,7 @@ ctx.fill();
 
 }
     function er5(){
-	var canvas = document.getElementById('example5');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -105,7 +105,7 @@ ctx.fillStyle = 'black';
 ctx.fill();
 }
     function er6(){
-	var canvas = document.getElementById('example6');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -121,7 +121,7 @@ ctx.fillStyle = 'red';
 ctx.fill();
 }
 	  function er7(){
-	var canvas = document.getElementById('example7');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -135,7 +135,7 @@ ctx.fill();
 
 }
 	  function er8(){
-	var canvas = document.getElementById('example8');
+	var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 ctx.beginPath();
 ctx.moveTo(320, 0);
@@ -164,20 +164,7 @@ ctx.fill();
 <a href="#" onclick="er8()" class="button purple">3.31з</a>
 
 <br>
-	<canvas width='640' height='480' id='example1'>Обновите браузер</canvas>
+	<canvas width='640' height='480' id='example'>Обновите браузер</canvas>
 	<br>
-	<canvas width='640' height='480' id='example2'>Обновите браузер</canvas>
-	<br>
-	<canvas width='640' height='480' id='example3'>Обновите браузер</canvas>
-	<br>
-	<canvas width='640' height='480' id='example4'>Обновите браузер</canvas>
-	<br>
-	<canvas width='640' height='480' id='example5'>Обновите браузер</canvas>
-	<br>
-	<canvas width='640' height='480' id='example6'>Обновите браузер</canvas>
-	<br>
-	<canvas width='640' height='480' id='example7'>Обновите браузер</canvas>
-	<br>
-	<canvas width='640' height='480' id='example8'>Обновите браузер</canvas>
-	</body>
+	
 </html>
