--- a/js4.html
+++ b/js4.html
@@ -33,6 +33,14 @@ a.button.purple:active {
     box-shadow: inset 0 10px 15px 0 #ba87b5; }
 </style>
         		<script>
+function clean(){
+var canvas = document.getElementById('example');
+var ctx = canvas.getContext('2d');
+ctx.fillStyle = "white";
+ctx.fillRect(0, 0, 640, 480);
+
+}
+
 		function er1(){
 var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
