--- a/js.html
+++ b/js.html
@@ -32,7 +32,7 @@
   <a  href="js3.html">2.25-2.33</a>
    <br>
   <br>
-  <a  href="js4.html">2.32</a>
+  <a  href="js4.html">собственное задание</a>
   </body>
 </html>
 
