--- a/js5.html
+++ b/js5.html
@@ -39,34 +39,72 @@ ctx.fillRect(0, 0, 640, 480);
 ctx.closePath(); 
 } 
 function er1(){ 
+  clean()
+  var x=Number(document.getElementById("x_znach").value); 
+var y=Number(document.getElementById("y_znach").value); 
   var canvas = document.getElementById('example');
 var ctx=canvas.getContext("2d");
+var R=Math.sqrt(x / Math.PI)
+var D=Math.sqrt(y*2)
 ctx.beginPath();
 ctx.moveTo(320, 0); 
 ctx.lineTo(320, 480); 
 ctx.moveTo(0, 240); 
 ctx.lineTo(640, 240); 
-ctx.arc(320, 240, x\2* Math.PI  , 0, 2 * Math.PI)
+ctx.arc(320, 240, R, 0, 2 * Math.PI)
 ctx.moveTo(320, 240); 
-ctx.strokeRect(320-y\,240+y\,320+y\,240-y\)
+
+ctx.moveTo(320-Math.sqrt(y)/2,240-Math.sqrt(y)/2)
+ctx.lineTo(320+Math.sqrt(y)/2,240-Math.sqrt(y)/2)
+ctx.lineTo(320+Math.sqrt(y)/2,240+Math.sqrt(y)/2)
+ctx.lineTo(320-Math.sqrt(y)/2,240+Math.sqrt(y)/2)
+ctx.lineTo(320-Math.sqrt(y)/2,240-Math.sqrt(y)/2)
 ctx.stroke(); 
-x=Number(document.getElementById("x_znach").value); 
-y=Number(document.getElementById("y_znach").value); 
-if ((y<=0 &&  y>=x*x-60)||(x >=0 && y*y+x*x<=1600)||(y*y+x*x<=1600 && y>=x*x-60)) {
-document.getElementById("otvet").innerHTML = "Точка в области";
+if ((2*R>D)) {
+document.getElementById("otvet").innerHTML = "квадрат в круге";
+} else {if (2*R<Math.sqrt(y)) {
+document.getElementById("otvet").innerHTML = "круг в квадрате";
 } else {
-document.getElementById("otvet").innerHTML = "Точка не в области"; 
+document.getElementById("otvet").innerHTML = "пересечениее"; 
+}
+}
+}
+function er2(){ 
+  clean()
+  var x=Number(document.getElementById("x_znach").value); 
+var y=Number(document.getElementById("y_znach").value); 
+  var canvas = document.getElementById('example');
+var ctx=canvas.getContext("2d");
+var R=Math.sqrt(x / Math.PI);
+var a=Math.sqrt(y*4/Math.sqrt(3));
+var h =2*y/a;
+ctx.beginPath();
+ctx.moveTo(320, 0); 
+ctx.lineTo(320, 480); 
+ctx.moveTo(0, 240); 
+ctx.lineTo(640, 240); 
+ctx.arc(320, 240, R, 0, 2 * Math.PI)
+ctx.moveTo(320, 240); 
+
+ctx.moveTo(320,240-h*2/3)
+ctx.lineTo(320-a/2,240+h*1/3)
+ctx.lineTo(320+a/2,240+h*1/3)
+ctx.lineTo(320,240-h*2/3)
+ctx.stroke(); 
+if (2*R>a) {
+document.getElementById("otvet").innerHTML = "квадрат в круге";
+} else {
+document.getElementById("otvet").innerHTML = "круг в квадрате"; 
 }
 } 
-
 </script> 
 </head> 
 <body> 
 x=<input type="text" value="0" id="x_znach"> 
 y=<input type="text" value="0" id="y_znach"> 
 <a href="#" onclick="clean()" class="button purple">Очистить</a> 
-<a href="#" onclick="er1()" class="button purple">3.31а</a> 
-<a href="#" onclick="er2()" class="button purple">3.31б</a> 
+<a href="#" onclick="er1()" class="button purple">11111111</a> 
+<a href="#" onclick="er2()" class="button purple">22222222</a> 
 <br> 
 <canvas width='640' height='480' id='example'>Обновите браузер</canvas> 
 <br> 
