--- a/js.html
+++ b/js.html
@@ -33,6 +33,9 @@
    <br>
   <br>
   <a  href="js4.html">собственное задание</a>
+   <br>
+  <br>
+  <a  href="js5.html">4.16-4.18</a>
   </body>
 </html>
 
