--- a/js.html
+++ b/js.html
@@ -35,7 +35,10 @@
   <a  href="js4.html">собственное задание</a>
    <br>
   <br>
-  <a  href="js5.html">4.16-4.18</a>
+  <a  href="js5.html">4.16-4.17</a>
+  <br>
+  <br>
+  <a  href="js6.html">4.18</a>
   </body>
 </html>
 
