--- a/js7.html
+++ b/js7.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   
-  <script src="script.js">
+  <script src="script1.js">
     function func1() {
       n = Number(document.getElementById("n_f1_znach").value);
       var i = 20;
