--- a/js7.html
+++ b/js7.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
   
   <script src="script1.js">
     function func1() {
