--- a/js8.html
+++ b/js8.html
@@ -88,7 +88,7 @@
   <h1>5.30</h1> a=
   <input type="text" value="10" id="n_f7_znach">b=
   <input type="text" value="20" id="n_f8_znach">
-  <a href="#" onclick="func4()"  class="circ-button">III</a>
+  <a href="#" onclick="func4()"  class="circ-button">IV</a>
   <div id="otvet4"></div>
 </body>
 </html>
