--- a/js.html
+++ b/js.html
@@ -48,6 +48,9 @@
   <br>
   <br>
   <a  href="js9.html">5.34 & 5.38</a>
+   <br>
+  <br>
+  <a  href="js9.html">6.1 & 6.2 & 6.8 & 6.9</a>
   </body>
 </html>
 
